# archmap

./: .archmap.toml  .clinerules  .gitignore  Cargo.toml  README.md  install.sh
scripts/: record-demo.sh
src/: api.rs  cli.rs  config.rs  fs.rs  lib.rs  main.rs  style.rs
src/analysis/: boundary.rs  circular.rs  cohesion.rs  complexity.rs  coupling.rs  depth.rs  god_object.rs  graph.rs  impact.rs  mod.rs
src/commands/: ai.rs  analyze.rs  diff.rs  graph.rs  impact.rs  init.rs  mcp.rs  mod.rs  snapshot.rs
src/graph/: assets.rs  data.rs  mod.rs  routes.rs
src/model/: boundary.rs  issue.rs  mod.rs  module.rs
src/output/: ai.rs  json.rs  markdown.rs  mod.rs
src/output/ai/: context.rs  json.rs  markdown.rs  mod.rs  xml.rs
src/parser/: common.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/snapshot/: diff.rs  mod.rs  serialize.rs
tests/: library_api.rs
