[package]
name = "archmap"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.25"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"
petgraph = "0.8.3"
ignore = "0.4"
thiserror = "2"
rayon = "1.10"
tiktoken-rs = "0.9.1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
open = "5"
colored = "3"
termimad = "0.34"
crossterm = "0.28"
